Fix nav links jumping to headline without offset.

--- a/benchmark/style.css
+++ b/benchmark/style.css
@@ -3,6 +3,15 @@ body
     font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
 }
 
+[id]::before
+{
+    content: '';
+    display: block;
+    height:      56px;
+    margin-top: -56px;
+    visibility: hidden;
+}
+
 .navbar-brand
 {
     padding-right: 1.5rem;
